# ActionsGPT-Legal-Reasoning-API

./: .env.example  .gitignore  AGENTS.md  CNAME  Dockerfile  MANIFEST.in  README.md  SKILL.md  app.py  app_webhook.py  codex_client.py  codex_config.json  codex_orchestrator.py  core.py  create_installation_token.py  docker-compose.yml  index.html  legal-identity-management.skill  legislaw.2025-09-10.private-key.pem  livechat.config.json  main.html  main.py  makefile  mcp.py  microfrontends.json  package-lock.json  package.json  pnpm-lock.yaml  project.toml  pyproject.toml  requirements-dev.txt  requirements.txt  script.js  server.py  styles.css
__tests__/: architecture.test.ts  auth-contracts.test.ts  nlp.test.ts  orchestrator.test.ts  reasoning.test.ts
api/: __init__.py  config.py  models.py  schemas.py  security.py  state.py  utils.py
app/: globals.css  layout.tsx  page.tsx
components/: analysis-router.tsx  bucket-browser.tsx  dashboard-nav.tsx  document-upload-form.tsx  documents-table.tsx  exhibit-form.tsx  exhibits-table.tsx  identity-form.tsx  identity-table.tsx  interactive-demo-wrapper.tsx  interactive-demo.tsx  results-renderer.tsx  run-tests-form.tsx  search-form.tsx  search-metrics-display.tsx  smart-input.tsx  test-metrics.tsx  test-results-table.tsx  variant-form.tsx  variants-list.tsx  video-processing-status.tsx  video-upload-form.tsx
config/: precedent_hierarchy.yml  providers.yml  registries.yml
data/: canon.json
sample_files/: favorite_acts.txt  favorite_books.txt  favorite_regulations.txt  favorite_songs.txt
sandbox/: Dockerfile  (+1 more)
(+130 files in other folders)
