[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["venv", ".venv"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true

[tool.pytest.ini_options]
pythonpath = ["."]
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "actions-gpt-legal-reasoning-api"
version = "0.1.0"
description = "Legal reasoning API"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn==0.30.6",
  "httpx==0.27.2",
  "pydantic==2.8.2",
  "beautifulsoup4==4.12.3",
  "python-multipart==0.0.9",
  "PyYAML==6.0.2",
]

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "config*", "data*"]
exclude = ["sandbox*", "tests*", "test*", "docs*", "scripts*", ".*"]

[tool.setuptools.data-files]
config = [
  "config/*.yml",
]
data = [
  "data/*.json",
]
